Prevented display from overflowing

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 
 .display-container {
     height: 100px;
+    margin: 20px;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -47,11 +48,11 @@ body {
 
 #display-result {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin-right: 20px;
-    margin-bottom: 10px;
+    margin: 0;
     padding: 0px;
     font-size:xx-large;
     color: white;
+    overflow-x: auto;
 }
 
 .number {
